# black_hole_engine

./: .gitignore  CMakeLists.txt  PROJECT_OVERVIEW.md  build_web.bat  readme.md  run_web.bat
.cache/clangd/index/: _fixes.hpp.109F872570AE11B3.idx  _fixes.hpp.61E74F7C247DA357.idx  _fixes.hpp.82F7DEB42178F579.idx  _fixes.hpp.B9DF0DC1BBB855BF.idx  _vectorize.hpp.2A7EA057EA288C63.idx  _vectorize.hpp.2CCA7D46549D8E1E.idx  _vectorize.hpp.BBAEF8AD73DE3F92.idx  _vectorize.hpp.E760E3FC3CC27B54.idx  camera.h.1D0411F46E0A54BD.idx  camera.h.77EAD6C322F202C1.idx  camera.h.A02D612BC1B4E9FE.idx  camera.h.A923C22A0D59B750.idx  common.hpp.021FD1D4510C7982.idx  common.hpp.64D59577D8151987.idx  common.hpp.C92A82CA885C925E.idx  common.hpp.E986FF3758BB1FD1.idx  compute_common.hpp.643A61B076D02130.idx  compute_common.hpp.75FA32AC0F31A53B.idx  compute_common.hpp.BCF882603E065CE5.idx  compute_common.hpp.FE4FE006D16AD4F2.idx  compute_vector_decl.hpp.51930C136D08FC6C.idx  compute_vector_decl.hpp.7B9884C67A69D93B.idx  compute_vector_decl.hpp.8728B9DD5B1C7F5E.idx  compute_vector_decl.hpp.E8A48A4B0412E7AC.idx  compute_vector_relational.hpp.02B02E6287ED3DD5.idx  compute_vector_relational.hpp.12992A82CE496349.idx  compute_vector_relational.hpp.B66F151AFEACF7F8.idx  compute_vector_relational.hpp.E2ABDDAE0E151B3C.idx  constants.hpp.50EEBA8ECB8C8753.idx  constants.hpp.548F42603A48ECDE.idx  constants.hpp.85439082DC429E4C.idx  constants.hpp.FAA6C03B3B507D5B.idx  constants.inl.1B7E556692636617.idx  constants.inl.2FAE8A8EA017C27F.idx  constants.inl.B5CCFF722DA2C7B0.idx  constants.inl.D046B2DE2C872611.idx  exponential.hpp.5F6FABECA342793F.idx  exponential.hpp.691E628F999D6110.idx  exponential.hpp.79FF27C118CDA8BE.idx  exponential.hpp.7D652E93B57DDB68.idx  (+600 more)
include/: gl_api.h
include/glad/: glad.h
src/: engine.cpp  engine.h  game.cpp  game.h  glad.c  main.cpp
src/logstests/: random
src/models/: camera.h  core.cpp  core.h  object_editor.cpp  object_editor.h  particle.cpp  particle.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  startmenu.cpp  startmenu.h  texture.cpp  texture.h
src/rust/texture-preprocessor/: Cargo.toml
src/rust/texture-preprocessor/src/: main.rs
src/shader/: shader.cpp  shader.h
src/shaders/: fragment.glsl  light_source_fragment.glsl  vertex.glsl
src/shaders_web/: basic.frag  basic.vert  bg.frag  bg.vert
web/: betterIndex.html  index.js  index.wasm  main_web.cpp  shell.html  style.css
